--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -2,7 +2,7 @@ name: docker-image-push-public-dash
 
 on:
   push:
-    branches: [ main, image-push ]
+    branches: [ main ]
     
   workflow_dispatch:
     inputs:
@@ -65,8 +65,7 @@ jobs:
           # TODO: Create a token with basic repo permissions
           name: docker-image-tag
           github-token: ${{ secrets.GH_PAT_TAG }}
-          # repository: e-mission/e-mission-server
-          repository: MukuFlash03/e-mission-server
+          repository: e-mission/e-mission-server
           run-id: ${{ env.RUN_ID }}
 
       - name: Print artifact tag
