Updated username to clarify that env file is being updated

--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -106,7 +106,7 @@ jobs:
     - name: Add, Commit, Push changes to .env file
       run: |
         git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.name "Github Actions bot to update .env with latest tags"
         if git diff --quiet; then
           echo "Latest timestamp already present in .env file, no changes to commit"
         else
