Redesign Build Deployment Process (External) (#125)
* Create image_build_push.yml

* Added docker build and push for dashboard and notebook images + Updated viz_scripts Dockerfile

viz_scripts Dockerfile contains ENV variables from docker-compose as well.

Added docker image commands to image_build_push yml for dashboard and notebook images

* Changed sed to jq + Renamed docker image in image_push

1. Sed to jq change to make it consistent to what is being used in internal repos.

2. Renamed image pushed to docker hub.

* Added TODO to change image push branch

Currently the branch specified - "image-push-merge" is available locally on my system.

I use it to test the automated docker image push mechanism whenever any changes are merged to this branch.

Once, everything looks good, need to change this to master or main as per the repo.

* Removed printing Docker username

Had added it initially for testing purposes.
Can remove now so it doesn't expose any sensitive info.

* Added cert.sh + Modified Dockerfiles

1. docker/cert.sh
- Uses new environment variable PROD_STAGE variable to determine whether in staging / production environment and only then install certificates, else skip.

2. Dockerfile
Added environment variables here, keeping the same default ENV values as the ones in docker-compose.yml.
Not adding in docker/Dockerfile.dev, since this change is being done primarily with the objective to aid with the automated build and push to Dockerhub.
This pushed image would then be the one that would be used in the internal environments as the base image, which would be based on the non-dev Dockerfile.

* Removing ENV variables from Dockerfile

The other ENV vars that were added in Docker-compose files are currently present in the Dockerfile in the external repo root.
Removing them from there and can add them as per requirement.
For local testing, add them when “docker run” is used using the -e flag.
For usage in stage / prod

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,8 +18,10 @@ services:
   notebook-server:
     image: em-pub-dash-dev/viz-scripts
     build:
-        context: viz_scripts
-        dockerfile: docker/Dockerfile.dev
+      context: viz_scripts
+      dockerfile: docker/Dockerfile.dev
+      args:
+        SERVER_IMAGE_TAG: ${SERVER_IMAGE_TAG}
     depends_on:
       - db
     environment:
