--- a/viz_scripts/docker/environment36.dashboard.additions.yml
+++ b/viz_scripts/docker/environment36.dashboard.additions.yml
@@ -5,5 +5,6 @@ channels:
 dependencies:
 - seaborn=0.11.1
 - pip:
+  - git+https://github.com/JGreenlee/e-mission-common@0.6.0
   - nbparameterise==0.6
   - devcron==0.4
