--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+PUBLIC_DASH_NOTEBOOK_IMAGE_TAG=2024-09-21--39-25
+PUBLIC_DASH_FRONTEND_IMAGE_TAG=2024-09-21--39-25
 SERVER_IMAGE_TAG=2024-09-20--06-45
