--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -1,8 +1,6 @@
 # python 3
 ARG SERVER_IMAGE_TAG
-FROM shankari/e-mission-server:master_${SERVER_IMAGE_TAG}
-
-ADD https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem /etc/ssl/certs/
+FROM shankari/e-mission-server:${SERVER_IMAGE_TAG}
 
 VOLUME /plots
 
