--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -6,88 +6,11 @@ on:
     
   workflow_dispatch:
 
-env:
-  DOCKER_USER: ${{secrets.DOCKER_USER}}
-  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-      
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Fetch server image tag
-      id: get-server-tag
-      run: |
-        response=$(curl -s https://raw.githubusercontent.com/e-mission/e-mission-server/refs/heads/cleanup-cicd/.env)
-        SERVER_IMAGE_TAG=$(echo "$response" | grep "SERVER_IMAGE_TAG=" | cut -d'=' -f2)
-        echo "SERVER_IMAGE_TAG=$SERVER_IMAGE_TAG" >> "$GITHUB_OUTPUT"
-
-    - name: Set docker image tags
-      id: set-tags
-      run: |
-        set -a; source .env; set +a
-        echo "PUBLIC_DASH_NOTEBOOK_IMAGE_TAG=${PUBLIC_DASH_NOTEBOOK_IMAGE_TAG}" >> "$GITHUB_OUTPUT"
-        echo "PUBLIC_DASH_FRONTEND_IMAGE_TAG=${PUBLIC_DASH_FRONTEND_IMAGE_TAG}" >> "$GITHUB_OUTPUT"
-
-    - name: Print input docker image tags
-      run: |
-        echo "Event name: ${{ github.event_name }}"
-        echo "Current notebook image tag (push): ${{ steps.set-tags.outputs.PUBLIC_DASH_NOTEBOOK_IMAGE_TAG }}"
-        echo "Current frontend image tag (push): ${{ steps.set-tags.outputs.PUBLIC_DASH_FRONTEND_IMAGE_TAG }}"
-        echo "Latest server image tag (${{ github.event_name }}): ${{ steps.get-server-tag.outputs.SERVER_IMAGE_TAG }}"
-
-    - name: docker login
-      run: | # log into docker hub account
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-
-    - name: Get current date # get the date of the build
-      id: date
-      run: echo "date=$(date +'%Y-%m-%d--%M-%S')" >> "$GITHUB_OUTPUT"
-
-    - name: Run a one-line script
-      run: echo running in repo ${GITHUB_REPOSITORY#*/} branch ${GITHUB_REF##*/} on ${{ steps.date.outputs.date }}
-
-    - name: build docker image
-      run: |
-        SERVER_IMAGE_TAG=${{ steps.get-server-tag.outputs.SERVER_IMAGE_TAG }} docker compose -f docker-compose.yml build
-        docker images
-
-    - name: rename docker images
-      run: |
-        if [ "${{ github.event_name }}" == "push" ]; then
-          docker image tag em-pub-dash-prod/frontend:latest $DOCKER_USER/${GITHUB_REPOSITORY#*/}_frontend:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
-        fi
-        docker image tag em-pub-dash-prod/viz-scripts:latest $DOCKER_USER/${GITHUB_REPOSITORY#*/}_notebook:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
-
-    - name: push docker images
-      run: |
-        if [ "${{ github.event_name }}" == "push" ]; then
-          docker push $DOCKER_USER/${GITHUB_REPOSITORY#*/}_frontend:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
-        fi
-        docker push $DOCKER_USER/${GITHUB_REPOSITORY#*/}_notebook:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
-
-    - name: Update .env file 
-      run: |
-        echo "PUBLIC_DASH_NOTEBOOK_IMAGE_TAG=${GITHUB_REF##*/}_${{ steps.date.outputs.date }}" > .env
-        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-          echo "Workflow_dispatch: Reuse existing frontend image tag"
-          echo "PUBLIC_DASH_FRONTEND_IMAGE_TAG=${{ steps.set-tags.outputs.PUBLIC_DASH_FRONTEND_IMAGE_TAG }}" >> .env
-        else
-          echo "Push event: Update frontend image tag"
-          echo "PUBLIC_DASH_FRONTEND_IMAGE_TAG=${GITHUB_REF##*/}_${{ steps.date.outputs.date }}" >> .env
-        fi
-        echo "SERVER_IMAGE_TAG=${{ steps.get-server-tag.outputs.SERVER_IMAGE_TAG }}" >> .env
-  
-    - name: Add, Commit, Push changes to .env file
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "Github Actions bot to update .env with latest tags"
-        if git diff --quiet; then
-          echo "Latest timestamp already present in .env file, no changes to commit"
-        else
-          git add .env
-          git commit -m "Updated docker image tags in .env file to the latest timestamp"
-          git push origin 
-        fi
+  build:  
+    if: ${{ !contains(github.event.head_commit.author.name, 'Github Actions bot to update .env with latest tags') }}
+    uses: e-mission/e-mission-server/.github/workflows/reusable_image_build_push.yml@master
+    with:
+      repo: ${{ github.event.repository.name }}
+      branch: ${{ github.ref_name }}
+    secrets: inherit
