--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -2,15 +2,38 @@ name: docker-image-push-public-dash
 
 on:
   push:
-    branches: [ main ]
+    # branches: [ main ]
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
     
   workflow_dispatch:
 
 jobs:
-  build:  
+  get-branch-name:
+    runs-on: ubuntu-latest
+    outputs:
+      branch_name: ${{ steps.get-branch-name.outputs.branch_name }}
+    steps:
+      - name: Get branch name based on ref_type
+        id: get-branch-name
+        run: |
+          echo "Ref: ${{ github.ref }}"
+          echo "Ref name: ${{ github.ref_name }}"
+          echo "Ref type: ${{ github.ref_type }}"
+          echo "Github event base ref: ${{ github.event.base_ref }}"
+          if [ "${{ github.ref_type }}" == "tag" ]; then
+            base_ref=${{ github.event.base_ref }}
+            echo "Branch name: branch_name=${base_ref#refs/heads/}"
+            echo "branch_name=${base_ref#refs/heads/}" >> "$GITHUB_OUTPUT"
+          elif [ "${{ github.ref_type }}" == "branch" ]; then
+            echo "branch_name=${GITHUB_REF##*/}" >> "$GITHUB_OUTPUT"    
+          fi
+
+  build:
     if: ${{ !contains(github.event.head_commit.author.name, 'Github Actions bot to update .env with latest tags') }}
+    needs: [get-branch-name]
     uses: e-mission/e-mission-server/.github/workflows/reusable_image_build_push.yml@master
     with:
       repo: ${{ github.event.repository.name }}
-      branch: ${{ github.ref_name }}
+      branch: ${{ needs.get-branch-name.outputs.branch_name }}
     secrets: inherit
