Task A-1: Switching to GHCR + Task A-3: Image build/push on release and not push
Task A-3: Image build/push on release instead of on every push

1. Re-building on releases instead of tags
- Earlier I had set the trigger event as tags but this would mean any time we create a new tag the workflow would be triggered.
- Instead, we are actually creating releases and not tags through the UI.
- Hence changed the trigger event to releases, specifically “published” releases.

2. Build job check added
- We are now creating a new release through the reusable_image_build workflow which in turn triggers a new workflow run since the event trigger is set to run on new releases.
- This check ensures that we don't have an infinite loop and this new release doesn't again trigger a workflow run.

------

Task A-1: Switch to storing images in GHCR

1. Changes to Dockerfile
- Needed to add LABEL layer to ensure that the docker image is connected to the correct repository.
- For dashboard images that are dependent on the server image, changed to pull from GHCR.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,6 @@
 FROM node:21.7.2-alpine
+LABEL org.opencontainers.image.source=https://github.com/e-mission/em-public-dashboard
+
 VOLUME /public/plots
 
 RUN mkdir -p /public
