--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -1,6 +1,7 @@
 # python 3
 ARG SERVER_IMAGE_TAG
-FROM shankari/e-mission-server:${SERVER_IMAGE_TAG}
+FROM ghcr.io/e-mission/e-mission-server:${SERVER_IMAGE_TAG}
+LABEL org.opencontainers.image.source=https://github.com/e-mission/em-public-dashboard
 
 VOLUME /plots
 
