--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -1,10 +1,8 @@
 name: docker-image-push-public-dash
 
 on:
-  push:
-    # branches: [ main ]
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+  release:
+    types: [published]
     
   workflow_dispatch:
 
@@ -17,20 +15,15 @@ jobs:
       - name: Get branch name based on ref_type
         id: get-branch-name
         run: |
-          echo "Ref: ${{ github.ref }}"
-          echo "Ref name: ${{ github.ref_name }}"
-          echo "Ref type: ${{ github.ref_type }}"
-          echo "Github event base ref: ${{ github.event.base_ref }}"
           if [ "${{ github.ref_type }}" == "tag" ]; then
-            base_ref=${{ github.event.base_ref }}
-            echo "Branch name: branch_name=${base_ref#refs/heads/}"
-            echo "branch_name=${base_ref#refs/heads/}" >> "$GITHUB_OUTPUT"
+            target_branch=${{ github.event.release.target_commitish }}
+            echo "branch_name=${target_branch}" >> "$GITHUB_OUTPUT"
           elif [ "${{ github.ref_type }}" == "branch" ]; then
             echo "branch_name=${GITHUB_REF##*/}" >> "$GITHUB_OUTPUT"    
           fi
 
   build:
-    if: ${{ !contains(github.event.head_commit.author.name, 'Github Actions bot to update .env with latest tags') }}
+    if: ${{ !contains(github.event.release.body, 'Triggered on e-mission-server new release. Bumping up release version.') }}
     needs: [get-branch-name]
     uses: e-mission/e-mission-server/.github/workflows/reusable_image_build_push.yml@master
     with:
