Change internal container ports and update documentation

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,5 +9,8 @@ RUN npm i -g http-server
 COPY client /public/client
 COPY *.html /public/
 
-EXPOSE 6060
-CMD ["http-server", "-p", "6060"]
+# expose directive does not do anything, but for documentation purposes,
+# the port 3274 is mapped in the docker-compose.yml.
+EXPOSE 3274
+
+CMD ["http-server", "-p", "3274"]
