--- a/frontend/docker/Dockerfile.dev
+++ b/frontend/docker/Dockerfile.dev
@@ -5,5 +5,8 @@ WORKDIR /public
 
 RUN npm i -g http-server
 
-EXPOSE 6060
-CMD ["http-server", "-p", "6060"]
+# expose directive does not do anything, but for documentation purposes,
+# the port 3274 is mapped in the docker-compose.yml.
+EXPOSE 3274
+
+CMD ["http-server", "-p", "3274"]
