--- a/.github/workflows/test_with_docker.yml
+++ b/.github/workflows/test_with_docker.yml
@@ -30,5 +30,6 @@ jobs:
       run: echo Smoke test
 
     - name: Run the tests using docker-compose
-      run: docker compose -f setup/docker-compose.tests.yml build
-      run: docker compose -f setup/docker-compose.tests.yml up --exit-code-from web-server
+      run:  |
+        docker compose -f setup/docker-compose.tests.yml build
+        docker compose -f setup/docker-compose.tests.yml up --exit-code-from web-server
