Fix run command in test_with_docker.yml - notebook-server

--- a/.github/workflows/test_with_docker.yml
+++ b/.github/workflows/test_with_docker.yml
@@ -33,4 +33,4 @@ jobs:
       working-directory: .github/workflows
       run:  |
         docker compose -f ../../docker-compose.tests.yml build
-        docker compose -f ../../docker-compose.tests.yml up --exit-code-from web-server
+        docker compose -f ../../docker-compose.tests.yml up --exit-code-from notebook-server
