--- a/frontend/docker/Dockerfile.dev
+++ b/frontend/docker/Dockerfile.dev
@@ -1,12 +1,11 @@
-FROM node:21.7.2-alpine
+FROM node:20.7.0-alpine
 
 RUN mkdir -p /public
 WORKDIR /public
 
 RUN npm i -g http-server
 
-# expose directive does not do anything, but for documentation purposes,
-# the port 3274 is mapped in the docker-compose.yml.
-EXPOSE 3274
+RUN apk update && apk upgrade busybox
 
-CMD ["http-server", "-p", "3274"]
+EXPOSE 6060
+CMD ["http-server", "-p", "6060"]
