Reverted files to match upstream/main

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,11 @@ services:
        - emission
   notebook-server:
     image: em-pub-dash-prod/viz-scripts
-    build: viz_scripts
+    build: 
+      context: viz_scripts
+      dockerfile: Dockerfile
+      args:
+        SERVER_IMAGE_TAG: ${SERVER_IMAGE_TAG}
     depends_on:
       - db
     environment:
@@ -24,7 +28,7 @@ services:
       - STUDY_CONFIG=stage-program
     ports:
       # ipynb in numbers
-      - "47962:8888"
+      - "47962:47962"
     networks:
       - emission
     volumes:
