--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,8 +18,10 @@ services:
   notebook-server:
     image: em-pub-dash-dev/viz-scripts
     build:
-        context: viz_scripts
-        dockerfile: docker/Dockerfile.dev
+      context: viz_scripts
+      dockerfile: docker/Dockerfile.dev
+      args:
+        SERVER_IMAGE_TAG: ${SERVER_IMAGE_TAG}
     depends_on:
       - db
     environment:
@@ -29,7 +31,7 @@ services:
       - STUDY_CONFIG=stage-program
     ports:
       # ipynb in numbers
-      - "47962:8888"
+      - "47962:47962"
     networks:
       - emission
     volumes:
