⬆️  Update the version of npm
We install one slim package in here, so it is not pinned and we typically don't
need to upgrade. However the npm binary has its own dependencies, some of which
need to be upgraded.

If this doesn't work, we can also delete the npm binary after installing our
single package.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ VOLUME /public/plots
 RUN mkdir -p /public
 WORKDIR /public
 
+RUN npm install -g npm@latest
 RUN npm i -g http-server
 
 COPY client /public/client
