--- a/frontend/docker/Dockerfile.dev
+++ b/frontend/docker/Dockerfile.dev
@@ -3,6 +3,7 @@ FROM node:25.6.0-alpine3.23
 RUN mkdir -p /public
 WORKDIR /public
 
+RUN npm install -g npm@latest
 RUN npm i -g http-server
 
 EXPOSE 6060
